add quiz routes
